--- a/homework/hw2-goals-approaches/hw2-ry/hw2-ry.ipynb
+++ b/homework/hw2-goals-approaches/hw2-ry/hw2-ry.ipynb
@@ -6141,7 +6141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea407072",
+   "id": "23d1b873",
    "metadata": {},
    "source": [
     "## Part 4: Iteration, Measurement, & Validation \n",
@@ -6164,16 +6164,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "084b237c",
+   "id": "1fa0991c",
    "metadata": {},
    "source": [
-    "For this part, I picked my multiclass label and report its average and F1 score. I honestly cannot understand why my dvc exp diff would not work here and why it is working using the dvc file from example data instead of the one i created. The F-1 score is relatively high, indicating that the model performed overall good."
+    "For this part, I picked my multiclass label and report its average and F1 score. I honestly cannot understand why my dvc exp diff would not work here. The F-1 score is 0.22, which is relatively low, indicating that the model performed overall not so well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "11fc7aa6",
+   "execution_count": 59,
+   "id": "65cdbbbb",
    "metadata": {},
    "outputs": [
     {
@@ -6188,6 +6188,7 @@
       "    - topic_model.py\r\n",
       "    outs:\r\n",
       "    - topic_model\r\n",
+      "\r\n",
       "  multilabel_model:\r\n",
       "    cmd: '\" -d\" multilabel.py -d \"../../../data/mtg.feather -o\" multilabel_model.sav\r\n",
       "      \" python\" multilabel.py ../../../data/mtg.feather'\r\n",
@@ -6211,7 +6212,21 @@
       "    - metrics.json\r\n",
       "      cache: false\r\n",
       "    outs:\r\n",
-      "    - multilabel_model\r\n"
+      "    - multilabel_model.sav\r\n",
+      "\r\n",
+      "  multiclass_model_pip:\r\n",
+      "    cmd: python multiclass.py ../../../data/mtg.feather\r\n",
+      "    deps:\r\n",
+      "    - ../../../data/mtg.feather\r\n",
+      "    - multiclass.py\r\n",
+      "    params:\r\n",
+      "    - tfidf.min_df\r\n",
+      "    - tfidf.max_df\r\n",
+      "    metrics:\r\n",
+      "    - metrics.json\r\n",
+      "        cache: false\r\n",
+      "    outs:\r\n",
+      "    - multiclass_pip.sav\r\n"
      ]
     }
    ],
@@ -6221,17 +6236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "26a9ac77",
+   "execution_count": 56,
+   "id": "8aa968e9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tfidf:\r\n",
-      "\ttfidf.min_df\r\n",
-      "\ttfidf.max_df\r\n"
+      "preprocessing:\r\n",
+      "  df:\r\n",
+      "    smallest: 0.2\r\n",
+      "    largest: 0.8\r\n"
      ]
     }
    ],
@@ -6241,15 +6257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7a7d1868",
+   "execution_count": 57,
+   "id": "09f0280c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"precision\":0.2767742028,\"recall\":0.2436828806,\"f1-score\":0.2196945148,\"support\":6332.0}"
+      "{\"precision\":0.2255386768,\"recall\":0.2746585736,\"f1-score\":0.243352045,\"support\":2636.0}"
      ]
     }
    ],
@@ -6259,23 +6275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6a8e6652",
+   "execution_count": 58,
+   "id": "e1ea0725",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path                     Metric     HEAD     workspace    Change\n",
-      "../example/metrics.json  f1-score   0.79647  -            diff not supported\n",
-      "../example/metrics.json  precision  0.79656  -            diff not supported\n",
-      "../example/metrics.json  recall     0.79666  -            diff not supported\n",
-      "../example/metrics.json  support    2636     -            diff not supported\n",
       "\n",
-      "Path                    Param                          HEAD    workspace    Change\n",
-      "../example/params.yaml  preprocessing.ngrams.largest   2       -            diff not supported\n",
-      "../example/params.yaml  preprocessing.ngrams.smallest  1       -            diff not supported\n",
       "\u001b[0m"
      ]
     }
@@ -6287,7 +6295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7625b53a",
+   "id": "fa7279e6",
    "metadata": {},
    "outputs": [],
    "source": []
