--- a/homework/hw2-goals-approaches/yaa46/readme.ipynb
+++ b/homework/hw2-goals-approaches/yaa46/readme.ipynb
@@ -35178,7 +35178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "a57dcd75",
    "metadata": {},
    "outputs": [
@@ -35190,9 +35190,20 @@
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
       "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "Path          Metric        HEAD      workspace    Change\n",
+      "metrics.json  accuracy      0.27163   0.92596      0.65433\n",
+      "metrics.json  blue          0.30292   0.93175      0.62883\n",
+      "metrics.json  green         0.035088  0.93204      0.89695\n",
+      "metrics.json  macro avg     0.24521   0.92593      0.68072\n",
+      "metrics.json  purple        0.29623   0.92441      0.62818\n",
+      "metrics.json  red           0.35176   0.92913      0.57737\n",
+      "metrics.json  tan           0.24005   0.91232      0.67227\n",
+      "metrics.json  weighted avg  0.2424    0.92598      0.68358\n",
       "\n",
-      "Path         Param         HEAD    workspace    Change\n",
-      "params.yaml  tfidf.min_df  0.2     3            2.8\n",
+      "Path         Param                          HEAD    workspace    Change\n",
+      "params.yaml  preprocessing.ngrams.largest   -       1            diff not supported\n",
+      "params.yaml  preprocessing.ngrams.smallest  -       1            diff not supported\n",
+      "params.yaml  tfidf.min_df                   3       -            diff not supported\n",
       "\u001b[0m"
      ]
     }
